feat(Datastore): Add a failsafe hatch for disabling previous transaction retries using spring.cloud.gcp.datastore.previous-transaction-retry-enabled.
Change-Id: Ib23c2d4199fdccaf88eef83fc12e0085d40fe34a

--- a/docs/src/main/asciidoc/datastore.adoc
+++ b/docs/src/main/asciidoc/datastore.adoc
@@ -82,7 +82,7 @@ The following configuration options are available:
 | `spring.cloud.gcp.datastore.emulator.firestore-in-datastore-mode` | Configures whether the emulator runs in "Cloud Firestore in Datastore Mode" | No | `false`
 | `spring.cloud.gcp.datastore.skip-null-value` | Whether skip inserting `null` values. | No | The default value is `false`.
 If configured to `true`, `null` value will not be inserted into the datastore.
-
+| `spring.cloud.gcp.datastore.previous-transaction-retry-enabled` | Whether to retry a transactions with previous transaction when combined with Retriable. | No | `true`
 |===
 
 ==== Repository settings
